--- a/CSSDAY1/css2.html
+++ b/CSSDAY1/css2.html
@@ -10,6 +10,7 @@
       min-height: 100px;
       width:90%;
       padding:10px;
+      background-color: rgb(253,255,250);
     }
     .footer{
       padding:5px;
@@ -24,10 +25,23 @@
     .footer .current{
       border:none;
     }
+    .footer > a:hover{
+      background-color: rgb(140,142,191);
+    }
+    .comment-stars{
+      width:77px;
+      height: 16px;
+      background-image: url(images/iconlist_1.png);
+      background-position:-107px -238px;
+    }
+
   </style>
   <html>
     <body>
-      <div class="comment-div"></div>
+      <div class="comment-div">
+        <div class="comment-stars"></div>
+        <hr/>
+      </div>
       <div class="footer">
         <a class="current">1</a> <a href="#">2</a>
           <a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a>
