css location exec

--- a/CSSNAV/nav.html
+++ b/CSSNAV/nav.html
@@ -20,7 +20,10 @@
         </nav>     
         <div id="list-div">
             <ul class="list2-class">
-                <li id="li1"><a href="#">图书、音像、数字商品</a><div class="list-menu" id="menu1"></div></li>
+                <li id="li1">
+                    <a href="#">图书、音像、数字商品</a><div class="list-menu" id="menu1"></div>
+                    <div style="clear:both;"></div>
+                </li>
                 <li><a href="#">家用电器</a></li>
             </ul>
         </div>
