--- a/CSSCORE/round.html
+++ b/CSSCORE/round.html
@@ -14,7 +14,7 @@
                 border:0px solid #000;
                 margin:100px auto;
                 position:relative;
-                transform:rotateX(-35deg);
+                transform:rotateX(-35deg) rotateY(0deg);
                 transform-style: preserve-3d;
             }
             #container div{
