--- a/bootstrap/bt.html
+++ b/bootstrap/bt.html
@@ -9,10 +9,11 @@
                margin:0 auto;
             }
         </style>
-        <!--引入css文件-->
+        <!--引入css文件
         <link rel="stylesheet" href="css/screen.css" media="screen and (min-width:992px) and (max-width:1199px)">
         <link rel="stylesheet" href="css/pad.css" media="screen and (min-width:768px) and (max-width:991px)">
-        <link rel="stylesheet" href="css/phone.css" media="screen and (max-width:767px)">
+        <link rel="stylesheet" href="css/phone.css" media="screen and (max-width:767px)">-->
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="container">
