--- a/bootstrap/divbt.html
+++ b/bootstrap/divbt.html
@@ -3,6 +3,7 @@
     <head>
         <title>div media query</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
         <link rel="stylesheet" href="css/divstyle.css">
     </head>
     <body>
