--- a/bootstrap/work.html
+++ b/bootstrap/work.html
@@ -23,12 +23,25 @@
                     <span>激情岁月</span>
                 </div>
                 <div id="center">
-
+                    <div id="imagediv">
+                        <img src="images/1.jpg">
+                        <img src="images/3.jpg">
+                        <img src="images/4.jpg">
+                        <img src="images/222.jpg">
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam assumenda at blanditiis dolore incidunt iste maxime nihil nostrum quos. Earum eveniet praesentium quisquam totam vero! Adipisci, blanditiis cumque ducimus earum quam repudiandae sit vitae voluptatum! Adipisci architecto aspernatur, assumenda beatae blanditiis debitis dolorem facere fuga fugiat laborum natus, non nostrum porro quo sapiente sequi veniam. Autem doloremque earum error fugit ipsum nihil, quaerat quasi quis repellendus unde. Ad aspernatur, at consectetur culpa cumque deserunt et facilis impedit inventore ipsum laborum maiores maxime mollitia qui quo quod quos sint. At consectetur doloremque maiores nihil perspiciatis quam quisquam reiciendis ullam vitae.
+                    </div>
                 </div>
-                <div id="left">
-
+                <div id="right">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </div>
+                <div id="footer">
+                    <hr>
                 </div>
             </div>
+
         </div>
+
     </body>
 </html>
