--- a/bootstrap/work.html
+++ b/bootstrap/work.html
@@ -16,6 +16,7 @@
                 </ul>
                 <input type="text" id="search" placeholder="search">
             </div>
+
             <div id="section">
                 <div id="left">
                     <span>豆蔻年华</span>
@@ -35,12 +36,13 @@
                 </div>
                 <div id="right">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                </div>
-                <div id="footer">
-                    <hr>
-                </div>
+                </div>                
             </div>
 
+            <div id="footer">
+                <hr>
+                <span>&copy;copy</span>
+            </div>
         </div>
 
     </body>
