--- a/bootstrap/work.html
+++ b/bootstrap/work.html
@@ -41,7 +41,7 @@
 
             <div id="footer">
                 <hr>
-                <span>&copy;copy</span>
+                <span>&copy;copyright </span>
             </div>
         </div>
 
