--- a/bootstrap/exercise.html
+++ b/bootstrap/exercise.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <link rel="stylesheet" href="css/exec.css">
+        <link rel="shortcut icon" href="images/imgs/favicon.ico" type="image/x-icon" />
         <title>bt 作业</title>
     </head>
     <body>
