--- a/bootstrap/btexercise.html
+++ b/bootstrap/btexercise.html
@@ -84,10 +84,10 @@
                         <dt>ES</dt>
                         <dd>EcmaScript JavaScript</dd>
                     </dl>
-                    <div class="text-right">
+                    <blockquote class="blockquote-reverse">
                         <p>知识改变命运</p>
                         <footer><cite title=“gaoerji”>高尔基-</cite></footer>
-                    </div>
+                    </blockquote>
                 </div>
             </div>
             <footer>
