--- a/bootstrap/btexercise.html
+++ b/bootstrap/btexercise.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 text-right">
+                <div class="col-md-3 col-md-offset-9">
                     <input type="text">
                 </div>
             </div>
