--- a/bootstrap/btexercise.html
+++ b/bootstrap/btexercise.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 col-md-offset-9">
-                    <input type="text">
+                    <input type="text" class="form-control">
                 </div>
             </div>
             <div class="row">
