--- a/bootstrap/bthomework.html
+++ b/bootstrap/bthomework.html
@@ -45,10 +45,11 @@
                     </ul>
 
                     <form class="navbar-form navbar-right">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="搜索...">
-                            <button class="btn btn-success">登陆</button>
+                        <div class="form-group has-feedback">
+                            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                            <input type="text" class="form-control has-feedback" placeholder="搜索...">
                         </div>
+                        <button class="btn btn-success">登陆</button>
                     </form>
                 </div>
             </nav>
