--- a/pm/login.html
+++ b/pm/login.html
@@ -29,7 +29,7 @@
     				<button id="logBtn" type="button" class="btn btn-primary btn-lg btn-block">Log in</button>
     			</form>
     			<br>
-    			<div class="welcome" style="font-Size:30px;"><span id="welcome_words"></span>Welcome..<span id="cursor_def">&nbsp;|</span></div>
+    			<div class="welcome" style="font-Size:30px;"><span id="welcome_words"></span><span id="cursor_def">&nbsp;|</span></div>
     		</div>    		
     	</div>
     	
