--- a/jquery/plugin.html
+++ b/jquery/plugin.html
@@ -15,22 +15,23 @@
 
 
 <script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/4.js"></script>
-<script src="js/5.js"></script>
+<!--<script src="js/4.js"></script>
+<script src="js/5.js"></script>-->
 <script src="js/6.js"></script>
 <script>
-    var arr=[10,30,50];
+ /*   var arr=[10,30,50];
     console.log(zzLib.max(arr));
     console.log(zzLib.min(arr));
 
 
     console.log(jQuery.max(arr));
-    console.log(jQuery.min(arr));
+    console.log(jQuery.min(arr));*/
 
 
-    console.log($('ul li').max());
+    //console.log($('ul li').max());
 
-
+    console.log($('ul li').sum());
+ console.log($('ul li').averg());
 </script>
 </body>
 </html>
