--- a/CSSNAV/nav.html
+++ b/CSSNAV/nav.html
@@ -24,7 +24,10 @@
                     <a href="#">图书、音像、数字商品</a>
                     <div class="list-menu" id="menu1"></div>
                 </li>
-                <li><a href="#">家用电器</a></li>
+                <li>
+                    <a href="#">家用电器</a>
+
+                </li>
                 <li><a href="#">电子产品、潮流风物</a></li>
             </ul>
         </div>
