--- a/jd2/index.html
+++ b/jd2/index.html
@@ -69,21 +69,111 @@
         </div>
     </div>
     <!--my jd-->
-    <div></div>
+    <div id="my-jd">
+        我的京东
+        <b></b>
+    </div>
     <!--shopping cart-->
-    <div></div>
+    <div id="shopping-cart">
+        去购物车结算
+        <b></b>
+    </div>
     <!--clear float affect-->
     <div class="clear"></div>
 </div>
 <!--主导航-->
-<nav id="nav"></nav>
+<nav id="nav">
+    <p><a href="#">全部商品分类</a></p>
+    <ul class="lf">
+        <li><a href="#">首页</a></li>
+        <li><a href="#">服装城</a></li>
+        <li><a href="#">食品</a></li>
+        <li><a href="#">团购</a></li>
+        <li><a href="#">夺宝岛</a></li>
+        <li><a href="#">闪购</a></li>
+        <li><a href="#">金融</a></li>
+    </ul>
+</nav>
 <!--banner广告-->
-<div id="banner"></div>
+<div id="banner">
+    <!--主分类-->
+    <ul id="cate-box">
+        <li>
+            <a href="#">图书，音像，数字商品</a>
+        </li>
+        <li>
+            <a href="#">家用电器</a>
+            <div id="sub-cate-box">
+                <!--关闭按钮-->
+                <div class="close">X</div>
+                <!--分类内容-->
+                <div class="sub-cate-items">
+                    <ul>
+                        <li class="title"><a href="#">电子书</a></li>
+                        <li><a href="#">免费</a></li>
+                        <li><a href="#">小说</a></li>
+                        <li><a href="#">励志与成功</a></li>
+                        <li><a href="#">婚恋/两性</a></li>
+                        <li><a href="#">文学</a></li>
+                        <li><a href="#">经营</a></li>
+                        <li><a href="#">畅读vip</a></li>
+                    </ul>
+                    <ul>
+                        <li class="title"><a href="#">数字音乐</a></li>
+                        <li><a href="#">通俗流行</a></li>
+                        <li><a href="#">古典音乐</a></li>
+                        <li><a href="#">摇滚说唱</a></li>
+                        <li><a href="#">爵士蓝调</a></li>
+                        <li><a href="#">乡村民谣</a></li>
+                        <li><a href="#">有声读物</a></li>
+                    </ul>
+                    <ul>
+                        <li class="title"><a href="#">音像</a></li>
+                        <li><a href="#">音乐</a></li>
+                        <li><a href="#">影视</a></li>
+                        <li><a href="#">教育音像</a></li>
+                        <li><a href="#">游戏</a></li>
+                    </ul>
+                    <ul>
+                        <li class="title"><a href="#">文艺</a></li>
+                        <li><a href="#">小说</a></li>
+                        <li><a href="#">文学</a></li>
+                        <li><a href="#">青春文学</a></li>
+                        <li><a href="#">传记</a></li>
+                        <li><a href="#">艺术</a></li>
+                    </ul>
+
+
+                </div>
+                <!--分类banner-->
+                <div class="sub-cate-banner">
+                    <p><a href="#"><img src="images/cate_banner_01.jpg" alt=""></a></p>
+                    <p><a href="#"><img src="images/cate_banner_02.jpg" alt=""></a></p>
+                    <h4>推荐品牌出版社/书店</h4>
+                    <ul>
+                        <li><a href="#">中华书局</a></li>
+                        <li><a href="#">人民邮电出版社</a></li>
+                        <li><a href="#">上海世纪出版股份有限公司</a></li>
+                        <li><a href="#">电子工业出版社</a></li>
+                        <li><a href="#">三联书店</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </li>
+    </ul>    
+    <!--滑动广告-->
+    <!--京东快报等-->
+</div>
 <!--页面主题-->
 <section id="main"></section>
 <!--页面底部，购物指南-->
 <footer id="footer_box"></footer>
 <!--页面底部，备案号-->
 <footer id="footer"></footer>
+
+
+<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/myjs.js"></script>
 </body>
 </html>
