--- a/jd2/index.html
+++ b/jd2/index.html
@@ -163,14 +163,221 @@
         </li>
     </ul>    
     <!--滑动广告-->
+    <div id="slider-box">
+        <!--滑动广告-->
+        <div id="slider">
+            <img src="images/index/banner_02.jpg" alt="">
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+            </ul>
+        </div>
+        <!--三幅小广告-->
+        <div id="ad">
+            <a href="#" class="previous"></a>
+            <a href="#" class="next"></a>
+            <ul class="lf">
+                <li>
+                    <img src="images/index/ad_01.jpg" alt="">
+                </li>
+                <li class="mid">
+                    <img src="images/index/ad_02.jpg" alt="">
+                </li>
+                <li>
+                    <img src="images/index/ad_03.jpg" alt="">
+                </li>
+            </ul>
+        </div>
+    </div>
     <!--京东快报等-->
+    <div id="extra-focus">
+        <!--图片-->
+        <p><img src="images/index/ad_focus.jpg" alt=""></p>
+        <!--京东快报-->
+        <div id="news">
+            <p>
+                <a href="#">更多快报&gt;</a>
+                <b>京东快报</b>
+            </p>
+            <div>
+                <ul class="lf">
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+
+
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+
+
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+
+
+
+
+
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+                </ul>
+
+                <ul class="rt">
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+
+
+                    <li><a href="#">搜索好年货，2折开枪</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!--虚拟相关-->
+        <ul id="virtuals">
+            <li>
+                <a href="#">
+                    <b></b>
+                    话费
+                    <i></i>
+                </a>
+            </li>
+            <li class="jipiao">
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <b></b>
+                    机票
+                    <i></i>
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 <!--页面主题-->
 <section id="main"></section>
 <!--页面底部，购物指南-->
-<footer id="footer_box"></footer>
+<footer id="footer_box">
+    <!--购物指南-->
+    <p class="shopping-guide">
+
+    </p>
+    <ul>
+        <li><b>购物指南</b></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+    </ul>
+    <!--配送方式-->
+    <!--购物指南-->
+    <p class="shopping-guide">
+
+    </p>
+    <ul>
+        <li><b>购物指南</b></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+    </ul>
+    <!--支付方式-->
+    <!--购物指南-->
+    <p class="shopping-guide">
+
+    </p>
+    <ul>
+        <li><b>购物指南</b></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+    </ul>
+    <!--售后服务-->
+    <!--购物指南-->
+    <p class="shopping-guide">
+
+    </p>
+    <ul>
+        <li><b>购物指南</b></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+        <li><a href="#">购物流程</a></li>
+    </ul>
+</footer>
 <!--页面底部，备案号-->
-<footer id="footer"></footer>
+<footer id="footer">
+    <a href="#">关于我们</a><a href="#">联系我们</a><a href="#">人才招聘</a><a href="#">商家入驻</a><a href="#">广告服务</a>
+    <a href="#">手机京东</a><a
+        href="#">京东社区</a><a href="#">友情链接</a><a href="#">销售梁萌</a><a href="#">京东工艺</a>
+    <div><p>
+        <a href="#">北京市公安局朝阳分局备案编号110105014669</a><a href="#">京ICP证070359号</a>
+        <a href="#">互联网药品信息服务资格证编号(京)-非经营性-20110034</a></p>
+    <p> <a href="#">音像制品经营许可证苏宿批005号</a><a href="#">出版物经营权许可证编号心出发(苏)批字第N-012号</a><a href="#">互联网出版许可证编号新网证(京)字150号</a></p>
+
+      <p>  <a href="#">网络文化经营许可证京网文[2011]0168-061号 Copyright &copy; 2004-2014 京东JD.com版权所有</a></p>
+        <p>  <a href="#">京东旗下网站: English Site 拍拍网 网银在线</a></p>
+
+
+    </div>
+    <ul class="lf">
+        <li>
+            <a href="#">
+                <img src="images/jy.jpg" alt="">
+            </a>
+        </li>
+        <li>
+            <a href="#"><img src="images/kx.jpg" alt="">
+        </li>
+        <li>
+            <a href="#"><img src="images/cy.jpg" alt=""></a>
+        </li>
+        <li><a href="#"><img src="images/cx.jpg" alt=""></a></li>
+    </ul>
+</footer>
 
 
 <script src="js/jquery-2.1.1.min.js"></script>
